# social-network-blockchain

./: user_service.sql
backend/: pom.xml
backend/api-gateway/: pom.xml
backend/comment-service/: db.sql  pom.xml
backend/exchange-service/: Cargo.toml
backend/fanpages-service/: pom.xml
backend/fanpages_service/: pom.xml
backend/message-service/: package-lock.json  package.json
backend/message-service/src/: app.module.ts
backend/nft-service/: Cargo.toml
backend/nft-service/src/: main.rs
backend/post-service/: db.sql  pom.xml
backend/user-service/: pom.xml
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/create-nft/: page.tsx
frontend/app/detail-nft/: page.tsx
frontend/app/fanpage/: page.tsx
frontend/app/landing-page/: page.tsx
frontend/app/marketplace/: page.tsx
frontend/app/message/: fakeLogin.ts  page.tsx
frontend/app/profile/: layout.tsx  page.tsx
frontend/app/sell/: page.tsx
frontend/app/send-web3/: page.tsx
frontend/components/feed/: AddPost.tsx  Feed.tsx  ad.tsx  feed.tsx  left-menu.tsx
frontend/components/magnetic/: magnetic.tsx
frontend/components/message/: ChatContent.tsx  Message.tsx  SidebarChats.tsx  TransactionMessage .tsx
frontend/components/rounded-button/: rounded-button.tsx
frontend/hooks/: sendTransaction.tsx  use-format-time.ts  use-state-toggle.ts
frontend/layout/: Footer.tsx  Navbar.tsx  footer.tsx  navbar.tsx  style.css
frontend/lib/: fontawesome.ts  utils.ts
frontend/src/: App.tsx
(+146 files in other folders)
