[package]
name = "nft-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
solana-client = "1.14"  # Solana SDK for interacting with the blockchain
solana-sdk = "1.14"     # Additional SDK if needed
serde_json = "1.0"
borsh = "0.9.3"

